Revision history for App-RecordStream-Bio

{{$NEXT}}

0.23  2017-07-21 10:30:24 PDT
    - Fixing the release process, no functional changes!

0.22  2017-07-21 10:25:50 PDT
    - Testing release process, no functional changes (but hey, version numbers
      are cheap!)

0.20  2017-07-21 10:08:10 PDT
    - Better fatpacking of the standalone bio.pm download

0.19  2017-07-20 13:33:09 PDT
    - New command fromgff3 for parsing GFF3 annotation files

0.18  2016-07-06 12:17:07 PDT
    - Point folks looking for fastq input/output to recs-fastq

0.17  2015-07-26 17:01:43 PDT
    - Mention fromsam in main package documentation

0.16  2015-07-23 10:52:49 PDT
    - New command fromsam for parsing next-gen sequencing SAM files

0.15  2015-04-19 21:19:03 PDT
    - Provide a fatpacked build suitable for use by the fatpacked version of
      recs (via the custom site mechanism).  See the installation documentation
      for details!

0.14  2015-04-07 21:11:28 PDT
    - Remove dependency on BioPerl via Bio::Seq and Bio::SeqIO

0.13  2014-06-26 14:35:42 PDT
    - Avoid test hangs when prerequisites are not installed.  Thanks to
      Alexandr Ciornii for the heads up.

0.12  2014-06-24 16:48:48 PDT
    - Allow a special key name "NONE" to disable the default keys for id,
      description, and sequence

0.11  2014-06-09 13:14:25 PDT
    - Declare more test dependencies
    - Fix t/fromfasta.t on Win32 due to broken assumptions about temp filenames

0.10  2014-06-04 17:24:18 PDT
    - Declare dependency on BioPerl

0.09  2014-06-04 16:18:36 PDT
    - recs-tofasta: Avoid extra blank lines after sequences without any bases
    - Comprehensive tests for fromfasta and tofasta

0.08  2014-05-27 15:48:45 PDT
    - recs-fromfasta: Strip leading/trailing spaces from sequence names

0.07  2014-05-01 17:12:33 PDT
    - Bug fix: recs-fromfasta with --filename-key produced incorrect results
      for the last sequence in a file when using multiple input files.

0.06  2014-04-08 18:06:48 PDT