@@ -1,6 +1,7 @@
 Revision history for App-RecordStream-Bio
 
 {{$NEXT}}
+    - New command togff3, complementing fromgff3
 
 0.23  2017-07-21 10:30:24 PDT
     - Fixing the release process, no functional changes!
